--- a/project.config.json
+++ b/project.config.json
@@ -14,7 +14,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.9.2",
-	"appid": "wx21a199a869e17779",
+	"appid": "wxfb52f2d7b2f6123a",
 	"projectname": "shop_xm",
 	"debugOptions": {
 		"hidedInDevtools": []
@@ -47,10 +47,10 @@
 			"current": -1,
 			"list": [
 				{
-					"id": -1,
-					"name": "pages/goods_list/goods_list",
-					"pathName": "pages/goods_list/goods_list",
-					"query": "cid=5&query=电视",
+					"id": 0,
+					"name": "pages/my/my",
+					"pathName": "pages/my/my",
+					"query": "type=3",
 					"scene": null
 				}
 			]
